tests/transpiler/x/swift/outer_join.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:52:48 GMT+7
import Foundation
let customers = [["id": 1, "name": "Alice"], ["id": 2, "name": "Bob"], ["id": 3, "name": "Charlie"], ["id": 4, "name": "Diana"]]
let orders = [["id": 100, "customerId": 1, "total": 250], ["id": 101, "customerId": 2, "total": 125], ["id": 102, "customerId": 1, "total": 300], ["id": 103, "customerId": 5, "total": 80]]
let result = ({ var _res: [[String: Any]] = []
for o in orders {
    for c in customers {
        if ((o["customerId"]! as! Int) == (c["id"]! as! Int)) {
            _res.append(["order": o, "customer": c])
        }
    }
}
return _res })()
print("--- Outer Join using syntax ---")
for row in result {
    if row["order"]! {
        if row["customer"]! {
            print("Order", String(describing: row["order"]!["id"]!), "by", String(describing: row["customer"]!["name"]!), "- $", String(describing: row["order"]!["total"]!))
        } else {
            print("Order", String(describing: row["order"]!["id"]!), "by", "Unknown", "- $", String(describing: row["order"]!["total"]!))
        }
    } else {
        print("Customer", String(describing: row["customer"]!["name"]!), "has no orders")
    }
}
